# bifrost-hass-ha-bridge

./: Cargo.toml  Dockerfile  README.md  config.example.yaml
.github/workflows/: rust.yml
crates/bifrost-api/src/: backend.rs  config.rs
crates/hue/src/: legacy_api.rs
crates/hue/src/api/: mod.rs  resource.rs  stubs.rs
deploy/: docker-compose.ghcr.yaml
deploy/homelab/bifrost-hass/: README.md  bifrost-hass.env.example  compose.override.yaml  compose.yaml  config.yaml  hass-ui.yaml
doc/: config-reference.md  sources-and-credits.md
src/: config.rs  main.rs  resource.rs
src/backend/: mod.rs
src/backend/hass/: backend_event.rs  client.rs  import.rs  mod.rs
src/backend/z2m/: backend_event.rs
src/model/: hass.rs  mod.rs
src/routes/: api.rs  eventstream.rs
src/routes/bifrost/: backend.rs  hass.rs  mod.rs
src/routes/clip/: mod.rs  sensor.rs
src/server/: appstate.rs  http.rs
ui/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: Chip.tsx  ConfirmDialog.tsx  EntityRow.tsx  Panel.tsx  SelectField.tsx  TactileButton.tsx  TextField.tsx  ToggleSwitch.tsx
ui/src/lib/: api.ts  patina.ts  types.ts
ui/src/pages/: AboutPage.tsx  BridgePage.tsx  EntitiesPage.tsx  LogsPage.tsx  RoomsPage.tsx  SetupPage.tsx
ui/src/state/: PatinaContext.tsx  ToastContext.tsx  useBifrostData.tsx
wiki/: Deployment.md  Home.md  Sources-and-Credits.md  Troubleshooting.md
